// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Meeting operations should create a new meeting 1`] = `
Object {
  "data": Object {
    "createMeeting": Object {
      "meeting": Object {
        "endsAt": Any<String>,
        "id": Any<String>,
        "startsAt": Any<String>,
        "title": "testMeeting",
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Meeting operations should fetch empty list of meetings 1`] = `
Object {
  "data": Object {
    "meetings": Array [],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Meeting operations should fetch freshly created meetings from database 1`] = `
Object {
  "data": Object {
    "meetings": Array [
      Object {
        "endsAt": Any<String>,
        "id": Any<String>,
        "startsAt": Any<String>,
        "title": "testMeeting",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Meeting operations should fetch specific meeting 1`] = `
Object {
  "data": Object {
    "meeting": Object {
      "endsAt": Any<String>,
      "id": Any<String>,
      "startsAt": Any<String>,
      "title": "testMeeting",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
